--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -119,7 +119,8 @@ img {
   align-items: center;
   margin: 0 auto;
   border-radius: 3px;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding: 0 24px;
   margin-top: 10px;
 }
 
