--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -38,13 +38,7 @@ li {
 .footer-links a:hover {
   color: #424242;
 }
-.logo {
-  font-size: 24px;
-  font-weight: bold;
-  color: #f9faf8;
-  padding: 5px;
-  padding-left: 50px;
-}
+
 .header-links {
   padding-right: 50px;
 }
@@ -54,10 +48,62 @@ li {
   align-items: center;
   justify-content: space-between;
   background-color: #100c14;
-  border-bottom: 1px solid #424242;
+  /* border-bottom: 1px solid #424242; */
   box-shadow: 0 5px 3px -3px black;
   position: fixed;
   width: 100%;
+  z-index: 1;
+}
+.logo img {
+  width: 90px;
+  height: auto;
+  position: relative;
+  right: -20px;
+  top: 0;
+}
+.block-button {
+  background: linear-gradient(to right, #0095ff, #444cc4);
+  border: 1px solid silver;
+  border-radius: 3px;
+  /* box-shadow: 0px 0px 6px 0px rgba(255, 255, 255, 0.5); */
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-family: 'Muli', sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 1.15385;
+  outline: none;
+  padding: 8px 0.8em;
+  position: fixed;
+  margin-right: 3.5rem;
+  right: 0;
+  top: 80px;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  display: block;
+  transition: all 0.15s ease;
+}
+
+.block-button:hover,
+.button-7:focus {
+  background: linear-gradient(to right, #0e9bff, #4a52c4);
+  /* transform: scale(1.02); */
+  box-shadow: 0px 0px 5px 0px rgba(255, 255, 255, 0.5);
+}
+
+.block-button:focus {
+  box-shadow: 0 0 0 4px rgba(0, 149, 255, 0.15);
+}
+
+.block-button:active {
+  background-color: #0064bd;
+  box-shadow: none;
 }
 .info {
   display: flex;
@@ -66,10 +112,10 @@ li {
   color: #808898;
   align-items: center;
   justify-content: center;
-  height: 200px;
+  height: 130px;
   padding-top: 60px;
 }
-img {
+.img img {
   width: 400px;
   height: 250px;
   display: flex;
